@@ -143,7 +143,7 @@ public class UpdateBuilder<T, ID> extends StatementBuilder<T, ID> {
 	}
 
 	@Override
-	protected void appendStatementEnd(StringBuilder sb) {
+	protected void appendStatementEnd(StringBuilder sb, List<ArgumentHolder> argList) {
 		// noop
 	}
 
